@@ -1,3 +1,9 @@
+2003-11-05  Don Porter	<dgp@users.sourceforge.net>
+
+	* tests/unixInit.test (unixInit-2.10):  New test to expose [Bug 832657]
+	failure of TclpInitLibraryPath() to properly handle .. in the path
+	of the executable.
+
 2003-11-04  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/Makefile: added 'test' target.
